--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-	"dependencies": {
-		"lucide-react": "^0.575.0",
-		"clsx": "^2.1.1",
-		"tailwind-merge": "^3.5.0"
-	}
+  "name": "fintax-root",
+  "private": true
 }
