--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ next-env.d.ts
 # Local Claude settings
 .claude/settings.local.json
 
+
+# Local Claude/Codex workspace (do not commit)
+.claude/
+
