--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ignore-pattern .tmp-test-build --max-warnings=0",
     "format": "prettier --write .",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "node scripts/test-eligibility.mjs && node --experimental-strip-types tests/case-status-stepper.test.mjs && node --experimental-strip-types tests/encryption-roundtrip.test.mjs && node --experimental-strip-types tests/stripe-webhook-mapper.test.mjs && node --experimental-strip-types tests/stripe-webhook-idempotency.test.mjs"
+    "test": "node scripts/test-eligibility.mjs && node --experimental-strip-types tests/case-status-stepper.test.mjs && node --experimental-strip-types tests/encryption-roundtrip.test.mjs && node --experimental-strip-types tests/stripe-webhook-mapper.test.mjs && node --experimental-strip-types tests/stripe-webhook-idempotency.test.mjs",
+    "precommit": "pnpm lint && pnpm typecheck",
+    "qa": "pnpm lint && pnpm typecheck && pnpm test && pnpm build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
