--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ next-env.d.ts
 .claude/settings.local.json
 
 
-# Local Claude/Codex workspace (do not commit)
-.claude/
+# Claude/Codex workspace: commit shared rules/skills, ignore only local secrets
+.claude/settings.local.json
+.claude/**/settings.local.json
 
