--- a/.gitignore
+++ b/.gitignore
@@ -42,11 +42,8 @@ next-env.d.ts
 
 .tmp-test-build
 
-# Local Claude settings
-.claude/settings.local.json
-
-
 # Claude/Codex workspace: commit shared rules/skills, ignore only local secrets
 .claude/settings.local.json
 .claude/**/settings.local.json
-
+.claude/.env.local
+.claude/**/.env.local
