--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "audit:prod": "pnpm audit --prod --audit-level=high",
     "license:check": "node scripts/license-check.mjs",
     "security:gate": "pnpm audit:prod && pnpm license:check"
+    ,"stripe:reconcile": "node scripts/stripe-reconcile.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
