--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "build": "node scripts/build-gate.mjs",
+    "build:next": "next build --webpack",
     "start": "next start",
     "lint": "eslint . --ignore-pattern .tmp-test-build --max-warnings=0",
     "format": "prettier --write .",
