--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "qa": "pnpm lint && pnpm typecheck && pnpm test && pnpm build",
     "audit:prod": "pnpm audit --prod --audit-level=high",
     "license:check": "node scripts/license-check.mjs",
-    "security:gate": "pnpm audit:prod && pnpm license:check"
-    ,"stripe:reconcile": "node scripts/stripe-reconcile.mjs"
+    "security:gate": "pnpm audit:prod && pnpm license:check",
+    "stripe:reconcile": "node scripts/stripe-reconcile.mjs",
+    "bsn:reencrypt": "node --experimental-strip-types scripts/bsn-reencrypt.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
